# fincy

./: .flake8  .readthedocs.yaml  CHANGELOG.md  README.md  atr_bands.pine  pyproject.toml  setup.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: code-linting.yml
docs/: conf.py  index.md  requirements-doc.txt
docs/tradingview/: index.md
docs/tradingview/indicators/: regression_channel.md
fincy/: __init__.py
fincy/core/: __init__.py  _base.py  base.py  interest.py
fincy/errors/: __init__.py  errors.py
tradingview/: README.md
tradingview/indicators/: atr_bands.pine  regression_channel.pine
tradingview/strategies/: pivot_points.pine
